samples/_failures_safe/1761242037_34efb3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5da489b.c:177:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  177 | void print
      | ^~~~
